--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,7 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
+      - name: Verify with Maven
+        run: mvn --batch-mode --update-snapshots verify
       - name: Build with Maven
         run: mvn -B package --file pom.xml
